move history tab, rename to we-do, fix burger menu click outside

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WeDo - Partner Tasks & Rewards</title>
-    <meta name="description" content="WeDo - A couple's task and reward management app" />
+    <title>We-Do - Partner Tasks & Rewards</title>
+    <meta name="description" content="We-Do - A couple's task and reward management app" />
     <meta name="author" content="Lovable" />
 
-    <meta property="og:title" content="WeDo" />
+    <meta property="og:title" content="We-Do" />
     <meta property="og:description" content="A couple's task and reward management app" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
